recipe + compat fixes